--- a/WorldBankEDA.ipynb
+++ b/WorldBankEDA.ipynb
@@ -64,7 +64,7 @@
         "\n",
         "**Literacy**\n",
         "\n",
-        "* Adult literacy rate, population 15+ years, both sexes (%) - SE.ADT.LITR.ZS\n",
+        "* Adult literacy rate, population 15+ years, both sexes (%) - **SE.ADT.LITR.ZS**\n",
         "* Adult illiterate population, 15+ years, both sexes (number) - **UIS.LP.AG15T99**\n",
         "\n",
         "**Population**\n",
