--- a/WorldBankEDA.ipynb
+++ b/WorldBankEDA.ipynb
@@ -10366,7 +10366,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "From the analysis we are able to conclude that **India** among all is one of the most significantly developing countries. India has shown positive growth over the the period of last 20 years (considering from 1995 to 2015). The early childhood enrolment rate of India shows tremendous extension, that signifies that people are more concious towards the education and also the literacy rate has improved considerably. We can see similar trends for countries like **USA**. This is clear that **USA** is currently more prominent and developed in terms of education but the outstanding growth of India over the years shows great potential for the Education domain.\n",
+        "From the analysis we are able to conclude that **India** among all is one of the most significantly developing countries. India has shown positive growth over the the period of last 20 years (considering from 1995 to 2015). The early childhood enrolment rate of India shows tremendous extension, that signifies that people are more concious towards the education and also the literacy rate has improved considerably. We can see similar trends for countries like **USA**. This is clear that USA is currently more prominent and developed in terms of education but the outstanding growth of India over the years shows great potential for the Education domain.\n",
         "\n",
         "Following are the Key Findings of our Analysis:\n",
         "\n",
